# friar

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/: gdl90.rs  glutin.rs  osm.rs  ourairports.rs  x_plane.rs
res/: planet_-104.99279,39.73659_-104.98198,39.74187.osm.pbf
src/: coordinate.rs  earth.rs  hgt_file.rs  hgt_srtm.rs  lib.rs  main.rs  osm.rs  perspective.rs  position.rs  reference.rs  screen.rs  spheroid.rs  triangle.rs  unit.rs  vector.rs  viewport.rs  x_plane.rs
src/gdl90/: foreflight.rs  geo_altitude.rs  heartbeat.rs  mod.rs  traffic.rs
src/hgt/: cache.rs  file.rs  mod.rs  srtm.rs
src/ourairports/: airport.rs  mod.rs  runway.rs
tests/: dsto-tn-0640.rs
